# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import quizRouter from "./quiz";
 import jumbledRouter from "./jumbled";
 import crosswordRouter from "./crossword";
+import crimeSceneRouter from "./crime-scene";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(quizRouter);
 router.use(jumbledRouter);
 router.use(crosswordRouter);
+router.use(crimeSceneRouter);
 
 export default router;
